--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -26,8 +26,7 @@ content: |-
   {{ .Requirements }}
   {{ .Providers }}
   {{ .Modules  }}
-  {{ range .Module.Resources }}
-  - {{ .GetMode }}.{{ .Spec }} ({{ .Position.Filename }}#{{ .Position.Line }})
+  {{ .Resources }}
   {{- end }} 
   {{ .Inputs }}
   {{ .Outputs }}
