Feature/gh actions (#23)

--- a/.terraform-docs.yml
+++ b/.terraform-docs.yml
@@ -14,8 +14,7 @@ sections:
   show: []
 
 content: |-
-  {{ .Header }}
-  
+  {{ .Header }}  
   ## Prerequisites
   
   The following IAM policy needs to be attached to the role that is assumed during the creation of module resources:
@@ -24,16 +23,12 @@ content: |-
   {{ include "iam/ecr-policy.json" }}
   ```
   
+  {{ .Requirements }}
   {{ .Providers }}
-  {{ .Outputs }}
+  {{ .Modules  }}
+  {{ .Resources }}
   {{ .Inputs }}
-  
-  {{ if .Module.Resources }}
-  ## Resources
-  {{ range .Module.Resources }}
-  - {{ .GetMode }}.{{ .Spec }} ({{ .Position.Filename }}#{{ .Position.Line }})
-  {{- end }}
-  {{- end }}
+  {{ .Outputs }}
 
 output:
   file: README.md
